--- a/style.css
+++ b/style.css
@@ -1,4 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
 body {
     background-color: #fffdd0;
     font-family: sans-serif;
 }
+</style>
+</head>
+</body>
+</html> 
