--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-<!DOCTYPEhtml>
-<html>
-<head>
-<style>
+<!DOCTYPE html
+<html
+<head
+<style
 body {
    background-color:#fffdd0;
    font-family: sans-serif;
 }
-</style>
-</head>
-</body>
-</html> 
+</style
+</head
+</body
+</html
