--- a/style.css
+++ b/style.css
@@ -2,3 +2,11 @@ body {
    background-color:#fffdd0;
    font-family: sans-serif;
 }
+
+h1 {
+   color:black;
+   font-weight:bold;
+   font-style:normal;
+   font-size:30px;
+   text-align:center;
+}
