--- a/style.css
+++ b/style.css
@@ -16,3 +16,15 @@ h2 {
    font-size:24px;
    font-style:italic;
 }
+
+section {
+   font-family: sans-serif;
+}
+
+.acoustic {
+   background-color:orange;
+}
+
+.electric {
+   background-color:aqua;
+}
