--- a/style.css
+++ b/style.css
@@ -20,3 +20,11 @@ h2 {
 section {
    font-family: sans-serif;
 }
+
+.acoustic {
+      background-color:orange;
+}
+
+.electric {
+      background-color:aqua;
+}
