--- a/style.css
+++ b/style.css
@@ -1,1 +1,89 @@
+body {
+   background-color:#fffdd0;
+   font-family: sans-serif;
+}
 
+h1 {
+   color:black;
+   font-weight:bold;
+   font-style:normal;
+   font-size:30px;
+   text-align:center;
+}
+
+h2 {
+   color:blue;
+   font-size:24px;
+   font-style:italic;
+}
+
+section {
+   font-family: sans-serif;
+}
+
+.acoustic {
+      background-color:orange;
+}
+
+.electric {
+      background-color:aqua;
+}
+
+h2>em {
+      Color:deeppink
+}
+
+h3 {
+    color:green;
+    font-size:18px;
+    font-style:italic;
+}
+
+div + h3 {
+     color:blueviolet;
+}
+
+div + p {
+     color:blueviolet;
+}
+
+p {
+	color:purple;
+	font-size:30px;
+}
+
+.specialtext {
+	color:black;
+	font-size:30px;
+}
+
+blockquote {
+	color:darkseasgreen;
+	font-family:serif;
+	text-align:center;
+	font-style:italic;
+}
+
+ul {
+	color:brown;
+}
+
+li {
+	color:firebrick;
+}
+
+a:hover {
+	background-color:yellow;
+}
+
+a:link {
+	color:blue;
+}
+
+a:active {
+	color:red;
+}
+
+a:visited {
+	color:purple;
+}
